--- a/css/main.css
+++ b/css/main.css
@@ -3247,7 +3247,7 @@ input[type=email] {
     width: 100%;
     height: 100%;
     /*  Page cover background image,color */
-    background: url(../img/code.png);
+    background: url(../img/desk.jpg);
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center;
