--- a/css/style-2.css
+++ b/css/style-2.css
@@ -173,6 +173,10 @@ a {
       background-size: cover;
       background-position: center;
       background-attachment: fixed;
+      -webkit-filter: grayscale(100%);
+      -moz-filter:    grayscale(100%);
+      -ms-filter:     grayscale(100%);
+      -o-filter:      grayscale(100%);
       opacity: 0.25; } }
 
 /* Footer */
